tests/chainsaw/disallow-selinux/bad-pod-type.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-selinux-type
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: spc_t
