tests/chainsaw/disallow-selinux/bad-pod-user.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-selinux-user
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        user: system_u
