tests/chainsaw/disallow-selinux/good-pod-allowed-type.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-allowed-selinux-type
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      seLinuxOptions:
        type: container_t
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
